Major refactor: build optimization, killswitch rewrite, memory tuning
Build System:
- Refactor Dockerfile to use golang:alpine for Go compilation
- Add GO_VERSION build arg for version control
- Add build flags: -trimpath, -buildvcs=false
- Add ts_omit_aws, ts_omit_bird, ts_omit_tap build tags for smaller binaries
- Fix UPX compression order (ultra-brute first)
- Add postinst, prerm, postrm scripts for proper package lifecycle

Init Scripts:
- Change state directory from /etc/tailscale to /var/lib/tailscale
- Use --statedir instead of deprecated --state flag
- Add --no-logs-no-support for Cudy (64MB RAM device)
- Add GOGC=50, GOMEMLIMIT tuning for memory optimization
- Add network interface triggers for mobile routers (wan/wwan)
- Add reload_service and service_stopped hooks
- Disable logging on Cudy to save memory

Killswitch:
- Rewrite OpenWrt 22.x logic to use explicit rules (not @forwarding[0])
- Add DNS leak prevention (block WAN DNS, allow Tailscale DNS)
- Add IPv6 support (family='any')
- Add interface existence verification
- Add firewall reload verification
- Improve status check with runtime rule verification

Closes #2, #3, #4, #6, #7, #10

--- a/.github/workflows/build-tailscale.yaml
+++ b/.github/workflows/build-tailscale.yaml
@@ -6,9 +6,16 @@ on:
       tailscale_version:
         description: 'Tailscale version to build (e.g. 1.88.3)'
         required: true
+      go_version:
+        description: 'Go version (default: 1.23)'
+        required: false
+        default: '1.23'
   push:
     tags:
       - 'v*'
+
+env:
+  GO_VERSION: ${{ github.event.inputs.go_version || '1.23' }}
 
 jobs:
   build-glinet:
@@ -32,6 +39,7 @@ jobs:
         run: |
           cd tailscale-package
           docker build \
+            --build-arg GO_VERSION=${{ env.GO_VERSION }} \
             --build-arg TAILSCALE_VERSION=${{ steps.version.outputs.version }} \
             --build-arg PACKAGE_VARIANT=glinet-mips24kc \
             --build-arg OPENWRT_ARCH=mips_24kc \
@@ -72,6 +80,7 @@ jobs:
         run: |
           cd tailscale-package
           docker build \
+            --build-arg GO_VERSION=${{ env.GO_VERSION }} \
             --build-arg TAILSCALE_VERSION=${{ steps.version.outputs.version }} \
             --build-arg PACKAGE_VARIANT=cudy-aarch64 \
             --build-arg OPENWRT_ARCH=aarch64_cortex-a53 \
