--- a/.github/workflows/build-tailscale.yaml
+++ b/.github/workflows/build-tailscale.yaml
@@ -97,6 +97,8 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write
+      id-token: write
+      attestations: write
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
@@ -109,8 +111,20 @@ jobs:
           cd packages
           sha256sum *.ipk > SHA256SUMS
 
+      - name: Generate SBOM
+        uses: anchore/sbom-action@v0
+        with:
+          path: packages/
+          output-file: packages/sbom.spdx.json
+          format: spdx-json
+
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-path: packages/*.ipk
+
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: packages/*
           generate_release_notes: true
