Add network/firewall integration and killswitch improvements
- postinst: Create tailscale network interface and firewall zone on install
- postinst: Add LAN<->Tailscale forwarding rules for exit node support
- config: Add killswitch UCI option for persistent state
- killswitch: Refactor to UCI-based, only manage blocking rules
- killswitch: Add router DNS protection (redirect to MagicDNS 100.100.100.100)
- killswitch: Restore original DNS config on disable
- init: Auto-apply killswitch rules on service start if enabled
- setup: Add first-run helper script (tailscale-setup)
- Dockerfile: Update postrm to clean up all UCI config on uninstall

This enables Tailscale to work out of the box on OpenWrt without manual
network/firewall configuration. The killswitch now provides complete
protection including router DNS queries.

--- a/tailscale-package/src/tailscale.config
+++ b/tailscale-package/src/tailscale.config
@@ -3,6 +3,8 @@ config tailscale 'config'
 	option port '41641'
 	option log_level ''
 	option extra_args ''
+	option killswitch '0'
+	# Enable exit node killswitch: blocks all WAN traffic except through Tailscale
 
 config tailscale 'hardware'
 	# Set by postinst based on detected hardware, can be overridden
