feat: add ts_wan_forward rule for exit node advertising
- Add ts_wan_forward forwarding rule in postinst (disabled by default)
- Update postrm to remove ts_wan_forward on uninstall
- Document exit node advertising in INSTALL.md

The rule allows this router to advertise as a Tailscale exit node.
Disabled by default for security - users must explicitly enable it.

--- a/tailscale-package/Dockerfile
+++ b/tailscale-package/Dockerfile
@@ -155,6 +155,7 @@ uci -q delete firewall.allow_ts_dns
 uci -q delete firewall.tailscale_zone
 uci -q delete firewall.lan_ts_forward
 uci -q delete firewall.ts_lan_forward
+uci -q delete firewall.ts_wan_forward
 
 # Remove network interface
 uci -q delete network.tailscale
