--- a/tailscale-package/src/tailscale.config
+++ b/tailscale-package/src/tailscale.config
@@ -5,6 +5,8 @@ config tailscale 'config'
 	option extra_args ''
 	option killswitch '0'
 	# Enable exit node killswitch: blocks all WAN traffic except through Tailscale
+	option authkey ''
+	# Auth key for headless setup (tskey-auth-xxx) - used once on first start
 
 config tailscale 'hardware'
 	# Set by postinst based on detected hardware, can be overridden
